--- a/try.html
+++ b/try.html
@@ -1,159 +1,61 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landlord Dashboard</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
-            margin: 0;
-            padding: 20px;
-        }
+{% extends "base.html" %}
 
-        .dashboard-container {
-            max-width: 1200px;
-            margin: auto;
-            padding: 20px;
-            background-color: white;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
-        }
+{% block title %}Landlord Dasboard{% endblock %}
 
-        h1 {
-            text-align: center;
-            color: #333;
-            font-weight: normal;
-            margin-bottom: 20px;
-        }
+{% block content %}
+<h1>Landlord Dashboard</h1>
+<nav>
+    <ul>
+        <li>
+            <a href="{% url 'apartment_list' %}">My Apartment</a>
+        </li>
+    </ul>
+</nav>
 
-        .link {
-            display: block;
-            text-align: center;
-            margin: 15px 0;
-            text-decoration: none;
-            color: #007BFF;
-            font-size: 18px;
-        }
+<form method="post" action="{% url 'logout' %}">
+    {% csrf_token %}
+    <button type="submit">Logout</button>
+</form>
 
-        .grid-container {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 20px;
-            margin: 20px 0;
-        }
+<hr>
 
-        .card {
-            background-color: #e2f0d9; /* Color for properties */
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-        }
+<form method="get">
+    <label>Select Month:</label>
+    <select name="month">
+        <option value="1" {% if selected_month == 1 %}selected{% endif %}>January</option>
+        <option value="2" {% if selected_month == 2 %}selected{% endif %}>February</option>
+        <option value="3" {% if selected_month == 3 %}selected{% endif %}>March</option>
+        <option value="4" {% if selected_month == 4 %}selected{% endif %}>April</option>
+        <option value="5" {% if selected_month == 5 %}selected{% endif %}>May</option>
+        <option value="6" {% if selected_month == 6 %}selected{% endif %}>June</option>
+        <option value="7" {% if selected_month == 7 %}selected{% endif %}>July</option>
+        <option value="8" {% if selected_month == 8 %}selected{% endif %}>August</option>
+        <option value="9" {% if selected_month == 9 %}selected{% endif %}>September</option>
+        <option value="10" {% if selected_month == 10 %}selected{% endif %}>October</option>
+        <option value="11" {% if selected_month == 11 %}selected{% endif %}>November</option>
+        <option value="12" {% if selected_month == 12 %}selected{% endif %}>December</option>
+    </select>
+    <button type="submit">Apply</button>
+</form>
 
-        .card.occupancy {
-            background-color: #d9e2f0; /* Color for occupancy */
-        }
+<h2>Overview for {{ month_name }}/{{ current_year }}</h2>
 
-        .card.rent-summary {
-            background-color: #f0d9d9; /* Color for rent summary */
-        }
+<h3>Properties</h3>
+<ul>
+    <li>Total Apartments: {{ total_apartments }}</li>
+    <li>Total Units: {{ total_units }}</li>
+</ul>
 
-        .card h3 {
-            margin-bottom: 10px;
-            color: #333;
-        }
+<h3>Occupancy</h3>
+<ul>
+    <li>Occupied Units: {{ occupied_units }}</li>
+    <li>Vacant Units: {{ vacant_units }}</li>
+</ul>
 
-        .card p {
-            margin: 5px 0;
-            font-weight: bold;
-        }
-
-        .form-container {
-            text-align: center;
-            margin: 20px 0;
-            grid-column: span 3; /* Span across all columns */
-        }
-
-        .form-container select, .form-container button {
-            padding: 10px;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-            font-size: 16px;
-            margin: 5px;
-        }
-
-        button {
-            background-color: #007BFF;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background-color: #0056b3;
-        }
-
-        .overview-container {
-            text-align: center;
-            grid-column: span 3; /* Span across all columns */
-        }
-
-        h2 {
-            color: #333;
-            margin: 20px 0;
-            font-weight: normal;
-        }
-    </style>
-</head>
-<body>
-    <div class="dashboard-container">
-        <h1>Landlord Dashboard</h1>
-        <a class="link" href="#">My Apartments</a>
-
-        <div class="form-container">
-            <label for="month">Select Month:</label>
-            <select id="month">
-                <option value="January">January</option>
-                <option value="February">February</option>
-                <option value="March">March</option>
-                <option value="April">April</option>
-                <option value="May">May</option>
-                <option value="June">June</option>
-                <option value="July">July</option>
-                <option value="August">August</option>
-                <option value="September">September</option>
-                <option value="October">October</option>
-                <option value="November">November</option>
-                <option value="December">December</option>
-            </select>
-            <button type="button">Apply</button>
-        </div>
-
-        <div class="overview-container">
-            <h2>Overview for March/2026</h2>
-        </div>
-        
-        <div class="grid-container">
-            <div class="card">
-                <h3>Properties</h3>
-                <p>Total Apartments: 10</p>
-                <p>Units: 50</p>
-            </div>
-
-            <div class="card occupancy">
-                <h3>Occupancy</h3>
-                <p>Occupied Units: 35</p>
-                <p>Vacant Units: 15</p>
-            </div>
-
-            <div class="card rent-summary">
-                <h3>Rent Summary</h3>
-                <p>Expected Rent: $5000</p>
-                <p>Collected Rent: $4500</p>
-                <p>Outstanding Balances: $500</p>
-            </div>
-        </div>
-    </div>
-</body>
-</html>
+<h3>Rent Summary</h3>
+<ul>
+    <li>Expected Rent: {{ expected_rent }}</li>
+    <li>Collected Rent: {{ collected_rent }}</li>
+    <li>Outstanding Balance: {{ outstanding_balance }}</li>
+</ul>
+{% endblock %}
