--- a/try.html
+++ b/try.html
@@ -1,37 +1,9 @@
-<h2>Units in {{ apartment.name }}</h2>
+<h2>Assign Tenant to Unit {{ unit.unit_number }}</h2>
+<form method="post">
+    {% csrf_token %}
 
-{% if user.is_landlord %}
-<a href="{% url 'unit_create' apartment.id %}">Add Unit</a>
-{% endif %}
+    <h3>Tenant Details</h3>
+    {{ tenant_form.as_p }}
 
-<ul>
-    {% for unit in units %}
-    <li>
-        Unit: {{ unit.unit_number }} |
-        Rent: {{ unit.rent }} |
-
-        {% if unit.is_occupied %}
-            Status: OCCUPIED
-            {% if unit.active_tenancy %}
-                | Tenant: {{ unit.active_tenancy.tenant.full_name }}
-                | <a href="{% url 'rent_record_list' unit.active_tenancy.id %}">
-                        Rent Records
-                  </a>
-                  
-                | <a href="{% url 'vacate_tenant' unit.active_tenancy.id %}">
-                    Vacate
-                  </a>
-            {% endif %}
-        {% else %}
-            Status: VACANT
-            {% if user.is_landlord or user.is_caretaker %}
-                | <a href="{% url 'assign_tenant' unit.id %}">
-                    Assign Tenant
-                  </a>
-            {% endif %}
-        {% endif %}
-    </li>
-    {% empty %}
-    <li>No units yet.</li>
-    {% endfor %}
-</ul>
+    <button type="submit">Assign Tenant</button>
+</form>
