--- a/trial.html
+++ b/trial.html
@@ -2,92 +2,75 @@
 
 {% load static %}
 
-  <head>
-    <title>Rent Records</title>
-
+<head>
+    <title>Edit Apartment</title>
     {% block extra_css %}
-    <!-- CSS -->
-    <link rel="stylesheet" href="{% static 'payments/css/rent_record_list.css' %}">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
+    <link rel="stylesheet" href="{% static 'properties/css/apartment_edit_form.css' %}">
     {% endblock %}
+</head>
 
-  </head>
+{% block content %}
+<div class="container">
 
-  {% block content %}
-    <div class="container">
-      <h2>Rent Records – John Mwangi (Unit A1)</h2>
-
-      <div class="table-wrapper">
-        <table>
-          <thead>
-            <tr>
-              <th>Month</th>
-              <th>Rent</th>
-              <th>Paid</th>
-              <th>Balance</th>
-              <th>Status</th>
-              <th>Actions</th>
-            </tr>
-          </thead>
-
-          <tbody>
-            <!-- Record 1 -->
-            <tr>
-              <td>March 2026</td>
-              <td>KES 25,000</td>
-              <td>KES 25,000</td>
-              <td>KES 0</td>
-              <td><span class="badge badge-paid">Paid</span></td>
-              <td><span class="action-paid">Paid</span></td>
-            </tr>
-            <tr>
-              <td colspan="6">
-                <div class="payment-history">
-                  <h4>Payment History</h4>
-
-                  <div class="payment-card">
-                    <p><span>Amount:</span> KES 15,000</p>
-                    <p><span>Method:</span> M-Pesa</p>
-                    <p><span>Reference:</span> QWE123XYZ</p>
-                    <p><span>Paid At:</span> 2026-03-05</p>
-                  </div>
-
-                  <div class="payment-card">
-                    <p><span>Amount:</span> KES 10,000</p>
-                    <p><span>Method:</span> Bank Transfer</p>
-                    <p><span>Reference:</span> BK99872</p>
-                    <p><span>Paid At:</span> 2026-03-12</p>
-                  </div>
-                </div>
-              </td>
-            </tr>
-
-            <!-- Record 2 -->
-            <tr>
-              <td>April 2026</td>
-              <td>KES 25,000</td>
-              <td>KES 10,000</td>
-              <td>KES 15,000</td>
-              <td><span class="badge badge-pending">Pending</span></td>
-              <td>
-                <a href="#" class="action-link">Record Payment</a>
-              </td>
-            </tr>
-            <tr>
-              <td colspan="6">
-                <div class="payment-history">
-                  <h4>Payment History</h4>
-
-                  <div class="payment-card">
-                    <p><span>Amount:</span> KES 10,000</p>
-                    <p><span>Method:</span> Cash</p>
-                    <p><span>Reference:</span> —</p>
-                    <p><span>Paid At:</span> 2026-04-08</p>
-                  </div>
-                </div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+    <!-- Header -->
+    <div class="page-header">
+        <h2>Apartment</h2>
     </div>
-    {% endblock %}
+
+    <!-- Form -->
+    <div class="form-card">
+        <form>
+
+            <!-- Apartment Name -->
+            <div class="form-group">
+                <label for="name">Apartment Name</label>
+                <div class="input-wrapper">
+                    <i class="fa-solid fa-building"></i>
+                    <input type="text" id="name" name="name" value="Sunset Residency">
+                </div>
+            </div>
+
+            <!-- Location -->
+            <div class="form-group">
+                <label for="location">Location</label>
+                <div class="input-wrapper">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <input type="text" id="location" name="location" value="Nairobi">
+                </div>
+            </div>
+
+            <!-- Caretaker (Dropdown from DB) -->
+            <div class="form-group">
+                <label for="caretaker">Caretaker</label>
+                <div class="input-wrapper select-wrapper">
+                    <i class="fa-solid fa-user-gear"></i>
+                    <select id="caretaker" name="caretaker">
+                        <!-- Django will loop caretakers here -->
+                        <option value="">Select caretaker</option>
+                        <option value="1" selected>Peter Mwangi</option>
+                        <option value="2">Mary Wanjiru</option>
+                        <option value="3">Joseph Otieno</option>
+                        <option value="4">Anne Njeri</option>
+                        <option value="5">Samuel Kiptoo</option>
+                    </select>
+                </div>
+            </div>
+
+            <!-- Actions -->
+            <div class="form-actions">
+                <button type="submit" class="btn btn-save">
+                    <i class="fa-solid fa-floppy-disk"></i> Save Changes
+                </button>
+                <a href="#" class="btn btn-back">
+                    <i class="fa-solid fa-arrow-left"></i> Back
+                </a>
+            </div>
+
+        </form>
+    </div>
+
+</div>
+{% endblock %}
